# code-paste

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: deloy.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  consts.ts
frontend/src/api/: snippet.ts
frontend/src/assets/: main.css  theme.css
frontend/src/components/: CodeEditor.vue  CodeViewer.vue  HeaderLink.vue  PasswordForm.vue  ShareLinks.vue  TheFooter.vue  TheHeader.vue  ThemeToggle.vue
frontend/src/models/: snippet.ts
frontend/src/plugins/toast/: ToastContainer.vue  ToastItem.vue  index.ts  types.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  HomeView.vue  NewView.vue  NotFoundView.vue  SnippetView.vue
src/: db.rs  log.rs  main.rs  models.rs  router.rs  task.rs
